# attestation

./: README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
notebooks/: attestation_notebook.ipynb
src/attestation/: __init__.py  _attestation.py  _template.py
src/attestation/_tests/: test_module.py
