[metadata]
name = attestation
version = 0.0.1
description = Automatically send your attestation letters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GuignardLab/attestation
author = Leo Guignard
author_email = leo.guignard@univ-amu.fr
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/GuignardLab/attestation/issues
    Documentation = https://github.com/GuignardLab/attestation#README.md
    Source Code = https://github.com/GuignardLab/attestation
    User Support = https://github.com/GuignardLab/attestation/issues

[options]
packages = find:
install_requires =
    bumpver

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    send-attestation = attestation:script_run

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[options.package_data]
* = *.yaml
